[gd_scene load_steps=2 format=3 uid="uid://ds77k4aj3gj3s"]

[ext_resource type="Script" path="res://prog_54b.gd" id="1_8phmt"]

[node name="Prog_54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8phmt")

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 311.0
offset_right = 146.0
offset_bottom = 351.0
text = "exit"

[node name="clear" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 262.0
offset_right = 150.0
offset_bottom = 302.0
text = "Clear"

[node name="calculate" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 207.0
offset_right = 159.0
offset_bottom = 247.0
text = "calculate"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 17.0
offset_right = 125.0
offset_bottom = 46.0
text = "Num 1:"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 298.0
offset_top = 84.0
offset_right = 596.0
offset_bottom = 282.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 80.0
offset_right = 137.0
offset_bottom = 104.0
text = "Num 2: "

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 117.0
offset_right = 88.0
offset_bottom = 140.0
text = "Num 3:"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 160.0
offset_right = 105.0
offset_bottom = 186.0
text = "Num 4:"

[node name="Num2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 73.0
offset_right = 157.063
offset_bottom = 104.0

[node name="Num4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 155.0
offset_right = 183.063
offset_bottom = 186.0

[node name="Num1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 15.0
offset_right = 185.063
offset_bottom = 46.0

[node name="Num3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 107.0
offset_top = 111.0
offset_right = 174.063
offset_bottom = 142.0

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="calculate" to="." method="_on_calculate_pressed"]
